[tool.poetry]
name = "nu4u"
version = "0.0.0"
description = "A tool made to help NU students create their 4-year plan!"
authors = ["Jayden Wool <52765228+jwoolnt@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
